# ner-characters-graph-literature

./: README.md  pyproject.toml
notebooks/: 01_ner_to_csv.ipynb
notebooks/data/artifacts/: aliases_v0.csv  person_mentions.csv  person_surface_counts.csv  persons_v0.csv  persons_v0.jsonl
notebooks/data/processed/: segments_story.csv  war_and_peace_ru.clean.txt
src/ner_characters_graph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
